--- a/build.xml
+++ b/build.xml
@@ -16,7 +16,16 @@
 	</target>
 	
 	<target name="jar" depends="compile">
-		<jar jarfile="build/exedio-cops.jar" basedir="build/classes" />
+		<jar jarfile="build/exedio-cops.jar" basedir="build/classes">
+			<manifest>
+				<attribute name="Specification-Title" value="exedio cops"/>
+				<attribute name="Specification-Version" value="cruisecontrol ${label} ${cvstimestamp}"/>
+				<attribute name="Specification-Vendor" value="exedio GmbH"/>
+				<attribute name="Implementation-Title" value="exedio cops"/>
+				<attribute name="Implementation-Version" value="cruisecontrol ${label} ${cvstimestamp}"/> 
+				<attribute name="Implementation-Vendor" value="exedio GmbH"/>
+			</manifest>
+		</jar>
 	</target>
 	
 	<target name="clean">
