move Form.java from copernica to cops
git-svn-id: https://svn.exedio.com/cope/trunk/cops@1966 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -11,6 +11,7 @@
 				optimize="off">
 			<classpath>
 				<pathelement location="../tomcat/common/lib/servlet-api.jar" />
+				<pathelement location="../tomcat/server/lib/commons-fileupload-1.0.jar" />
 			</classpath>
 		</javac>
 	</target>
