let Form.EnumField write its own html, let cops use jspm
git-svn-id: https://svn.exedio.com/cope/trunk/cops@1973 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,16 @@
 
 <project name="cops" default="all" basedir=".">
 
-	<target name="compile">
+	<target name="jspm">
+		<java classname="com.exedio.jspm.Main" taskname="jspm" fork="yes" failonerror="yes">
+			<classpath>
+				<pathelement location="../jspm/build/exedio-jspm.jar" />
+			</classpath>
+			<arg value="src/com/exedio/cops/Main.jspm" />
+		</java>
+	</target>
+	
+	<target name="compile" depends="jspm">
 		<mkdir dir="build/classes" />
 		<javac srcdir="src"
 				destdir="build/classes"
@@ -31,6 +40,11 @@
 	
 	<target name="clean">
 		<delete dir="build" />
+		<delete>
+			<fileset dir="src">
+				<include name="**/*_Jspm.java" />
+			</fileset>
+		</delete>
 	</target>
 
 	<target name="all" depends="compile, jar" />
