--- a/build.xml
+++ b/build.xml
@@ -49,6 +49,9 @@
 
 	<target name="api">
 
+		<property name="api.link.jdk" value="http://java.sun.com/j2se/1.4.2/docs/api" />
+		<property name="api.link.servlet" value="http://jakarta.apache.org/tomcat/tomcat-5.0-doc/servletapi" />
+
 		<delete dir="api" />
 		<mkdir  dir="api" />
 
@@ -67,6 +70,8 @@
 				bottom='&lt;small&gt;&amp;copy; Copyright 2004 &lt;a href="http://www.exedio.com/" target="_top"&gt;exedio&lt;/a&gt; Gesellschaft f&amp;uuml;r Softwareentwicklung mbH. All rights reserved.&lt;small&gt;'
 			>
 			<package name="com.*" />
+			<link href="${api.link.jdk}" />
+			<link href="${api.link.servlet}" />
 			<classpath>
 				<pathelement location="../tomcat/common/lib/servlet-api.jar" />
 				<pathelement location="../tomcat/server/lib/commons-fileupload-1.0.jar" />
