introduce jspm ant task
git-svn-id: https://svn.exedio.com/cope/trunk/cops@2055 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -2,13 +2,18 @@
 
 <project name="cops" default="all" basedir=".">
 
-	<target name="jspm">
-		<java classname="com.exedio.jspm.Main" taskname="jspm" fork="yes" failonerror="yes">
+	<target name="jspm.taskdef">
+		<taskdef name="jspm" classname="com.exedio.jspm.AntTask">
 			<classpath>
 				<pathelement location="lib/exedio-jspm.jar" />
 			</classpath>
-			<arg value="src/com/exedio/cops/Main.jspm" />
-		</java>
+		</taskdef>
+	</target>
+	
+	<target name="jspm" depends="jspm.taskdef">
+		<jspm>
+			<fileset dir="src" includes="**/*.jspm" />
+		</jspm>
 	</target>
 	
 	<target name="compile" depends="jspm">
