use short notation for taskdef classpath
git-svn-id: https://svn.exedio.com/cope/trunk/cops@2634 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -3,11 +3,9 @@
 <project name="cops" default="build" basedir=".">
 
 	<target name="jspm.taskdef">
-		<taskdef name="jspm" classname="com.exedio.jspm.AntTask">
-			<classpath>
-				<pathelement location="lib/exedio-jspm.jar" />
-			</classpath>
-		</taskdef>
+		<taskdef name="jspm" 
+					classname="com.exedio.jspm.AntTask"
+					classpath="lib/exedio-jspm.jar" />
 	</target>
 	
 	<target name="jspm" depends="jspm.taskdef">
