publish exedio-cops-api.tar.gz
git-svn-id: https://svn.exedio.com/cope/trunk/cops@2635 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -105,7 +105,15 @@
 		</javadoc>
 	</target>
 	
+	<target name="api.zip" depends="api">
+		<mkdir dir="build" />
+		<tar destfile="build/exedio-cops-api.tar.gz"
+			  compression="gzip">
+			<tarfileset dir="${basedir}/api" />
+		</tar>
+	</target>
+	
 	<target name="build" depends="compile, jar, api" />
-	<target name="all" depends="build, dist" />
+	<target name="all" depends="build, api.zip, dist" />
 
 </project>
