api: put doctitle/header/footer/bottom into nested elements and use CDATA for escaping
git-svn-id: https://svn.exedio.com/cope/trunk/cops@2668 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -92,12 +92,12 @@
 				use="on"
 				version="on"
 				windowtitle="Cops"
-				doctitle=   "Cops &lt;br&gt;API Specification"
-				header=     "Cops"
-				footer=     "Cops"
 				splitindex="on"
-				bottom='&lt;small&gt;Copyright &amp;copy; 2004-2005 &lt;a href="http://www.exedio.com/" target="_top"&gt;exedio&lt;/a&gt; Gesellschaft f&amp;uuml;r Softwareentwicklung mbH. All rights reserved.&lt;/small&gt;&lt;!--${label}-${cvstimestamp}--&gt;'
 			>
+			<doctitle><![CDATA[Cops<br>API Specification]]></doctitle>
+			<header>Cops</header>
+			<footer>Cops</footer>
+			<bottom><![CDATA[<small>Copyright &copy; 2004-2005 <a href="http://www.exedio.com/" target="_top">exedio</a> Gesellschaft f&uuml;r Softwareentwicklung mbH. All rights reserved.</small><!--${label}-${cvstimestamp}-->]]></bottom>
 			<package name="com.*" />
 			<link href="${api.link.jdk}" />
 			<link href="${api.link.j2ee}" />
