add failonerror=true to javadoc
git-svn-id: https://svn.exedio.com/cope/trunk/cops@2702 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -93,6 +93,7 @@
 				version="on"
 				windowtitle="Cops"
 				splitindex="on"
+				failonerror="true"
 			>
 			<doctitle><![CDATA[Cops<br>API Specification]]></doctitle>
 			<header>Cops</header>
