--- a/build.xml
+++ b/build.xml
@@ -18,6 +18,7 @@
 		<mkdir dir="build/classes" />
 		<javac srcdir="src"
 				destdir="build/classes"
+				includeAntRuntime="false"
 				deprecation="on"
 				debug="on"
 				optimize="off">
