nicer api headers
git-svn-id: https://svn.exedio.com/cope/trunk/cops@3965 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -97,8 +97,8 @@
 				failonerror="true"
 			>
 			<doctitle><![CDATA[Cops<br>API Specification]]></doctitle>
-			<header>Cops</header>
-			<footer>Cops</footer>
+			<header>exedio cops</header>
+			<footer>exedio cops</footer>
 			<bottom><![CDATA[<small>Copyright &copy; 2004-2005 <a href="http://www.exedio.com/" target="_top">exedio</a> Gesellschaft f&uuml;r Softwareentwicklung mbH. All rights reserved.</small><!--${label}-${cvstimestamp}-->]]></bottom>
 			<package name="com.*" />
 			<link href="${api.link.jdk}"  packagelistLoc="package-list/jdk"  offline="true" />
