--- a/build.xml
+++ b/build.xml
@@ -33,10 +33,10 @@
 		<jar jarfile="build/exedio-cops.jar" basedir="build/classes">
 			<manifest>
 				<attribute name="Specification-Title" value="exedio cops"/>
-				<attribute name="Specification-Version" value="cruisecontrol ${label} ${cvstimestamp}"/>
+				<attribute name="Specification-Version" value="${build.tag}"/>
 				<attribute name="Specification-Vendor" value="exedio GmbH"/>
 				<attribute name="Implementation-Title" value="exedio cops"/>
-				<attribute name="Implementation-Version" value="cruisecontrol ${label} ${cvstimestamp}"/> 
+				<attribute name="Implementation-Version" value="${build.tag}"/>
 				<attribute name="Implementation-Vendor" value="exedio GmbH"/>
 			</manifest>
 		</jar>
@@ -44,8 +44,7 @@
 	
 	<target name="dist.tar">
 		<mkdir dir="build" />
-		<echo file="build/build.number"
-				message="cruisecontrol ${label} ${cvstimestamp}" />
+		<echo file="build/build.number" message="${build.tag}" />
 		<tar destfile="build/exedio-cops-src.tar.gz"
 				compression="gzip">
 			<tarfileset file="${basedir}/build/build.number" />
@@ -99,7 +98,7 @@
 			<doctitle><![CDATA[Cops<br>API Specification]]></doctitle>
 			<header>exedio cops</header>
 			<footer>exedio cops</footer>
-			<bottom><![CDATA[<small>Copyright &copy; 2004-2005 <a href="http://www.exedio.com/" target="_top">exedio</a> Gesellschaft f&uuml;r Softwareentwicklung mbH. All rights reserved.</small><!--${label}-${cvstimestamp}-->]]></bottom>
+			<bottom><![CDATA[<small>Copyright &copy; 2004-2005 <a href="http://www.exedio.com/" target="_top">exedio</a> Gesellschaft f&uuml;r Softwareentwicklung mbH. All rights reserved.</small><!--${build.tag}-->]]></bottom>
 			<package name="com.*" />
 			<link href="${api.link.jdk}"  packagelistLoc="package-list/jdk"  offline="true" />
 			<link href="${api.link.j2ee}" packagelistLoc="package-list/j2ee" offline="true" />
