shorter windowtitle in api doc
git-svn-id: https://svn.exedio.com/cope/trunk/cops@4231 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -91,7 +91,7 @@
 				author="on"
 				use="on"
 				version="on"
-				windowtitle="Cops"
+				windowtitle="exedio cops"
 				splitindex="on"
 				failonerror="true"
 			>
