--- a/build.xml
+++ b/build.xml
@@ -98,7 +98,7 @@
 			<doctitle><![CDATA[Cops<br>API Specification]]></doctitle>
 			<header>exedio cops</header>
 			<footer>exedio cops</footer>
-			<bottom><![CDATA[<small>Copyright &copy; 2004-2005 <a href="http://www.exedio.com/" target="_top">exedio</a> Gesellschaft f&uuml;r Softwareentwicklung mbH. All rights reserved.</small><br><font size="-3">${build.tag}</font>]]></bottom>
+			<bottom><![CDATA[<small>Copyright &copy; 2004-2006 <a href="http://www.exedio.com/" target="_top">exedio</a> Gesellschaft f&uuml;r Softwareentwicklung mbH. All rights reserved.</small><br><font size="-3">${build.tag}</font>]]></bottom>
 			<package name="com.*" />
 			<link href="${api.link.jdk}"  packagelistLoc="package-list/jdk"  offline="true" />
 			<link href="${api.link.j2ee}" packagelistLoc="package-list/j2ee" offline="true" />
@@ -111,8 +111,8 @@
 	
 	<target name="api.zip" depends="api">
 		<mkdir dir="build" />
-		<tar destfile="build/exedio-cops-api.tar.gz"
-			  compression="gzip">
+		<tar destfile="build/exedio-cops-api.tar.bz2"
+			  compression="bzip2">
 			<tarfileset dir="${basedir}/api" />
 		</tar>
 	</target>
