move cruise artifacts selection into subprojects
git-svn-id: https://svn.exedio.com/cope/trunk/cops@4810 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -120,4 +120,14 @@
 	<target name="build" depends="compile, jar, api" />
 	<target name="all" depends="build, api.zip, dist" />
 
+	<target name="cruise" depends="all">
+		<delete dir="cruise" />
+		<mkdir dir="cruise" />
+		<copy todir="${basedir}/cruise">
+			<fileset file="${basedir}/build/exedio-cops.jar" />
+			<fileset file="${basedir}/build/exedio-cops-src.tar.gz" />
+			<fileset file="${basedir}/build/exedio-cops-api.tar.bz2" />
+		</copy>
+	</target>
+	
 </project>
