use duplicate=fail when creating jar files
git-svn-id: https://svn.exedio.com/cope/trunk/cops@5602 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -30,7 +30,7 @@
 	</target>
 	
 	<target name="jar" depends="compile">
-		<jar jarfile="build/exedio-cops.jar" basedir="build/classes">
+		<jar jarfile="build/exedio-cops.jar" basedir="build/classes" duplicate="fail">
 			<manifest>
 				<attribute name="Specification-Title" value="exedio cops"/>
 				<attribute name="Specification-Version" value="${build.tag}"/>
