switch to tomcat 5.5.17
git-svn-id: https://svn.exedio.com/cope/trunk/cops@5787 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,8 @@
 				optimize="off">
 			<classpath>
 				<pathelement location="lib/servlet-api.jar" />
-				<pathelement location="lib/commons-fileupload-1.0.jar" />
+				<pathelement location="lib/commons-fileupload-1.1.jar" />
+				<pathelement location="lib/commons-io-1.2.jar" />
 			</classpath>
 		</javac>
 	</target>
@@ -105,7 +106,7 @@
 			<link href="${api.link.j2ee}" packagelistLoc="package-list/j2ee" offline="true" />
 			<classpath>
 				<pathelement location="lib/servlet-api.jar" />
-				<pathelement location="lib/commons-fileupload-1.0.jar" />
+				<pathelement location="lib/commons-fileupload-1.1.jar" />
 			</classpath>
 		</javadoc>
 	</target>
