complete Class-Path in manifest
git-svn-id: https://svn.exedio.com/cope/trunk/cops@5895 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -39,6 +39,7 @@
 				<attribute name="Implementation-Title" value="exedio cops"/>
 				<attribute name="Implementation-Version" value="${build.tag}"/>
 				<attribute name="Implementation-Vendor" value="exedio GmbH"/>
+				<attribute name="Class-Path" value="servlet-api.jar commons-fileupload-1.1.jar" />
 			</manifest>
 		</jar>
 	</target>
