--- a/build.xml
+++ b/build.xml
@@ -79,6 +79,15 @@
 		</jar>
 	</target>
 	
+	<target name="jar.src">
+		<mkdir dir="build" />
+		<zip destfile="build/exedio-cops.jar-src.zip">
+			<zipfileset dir="${basedir}/src">
+				<include name="**/*.java" />
+			</zipfileset>
+		</zip>
+	</target>
+	
 	<target name="dist.tar">
 		<mkdir dir="build" />
 		<echo file="build/build.number" message="${build.tag}" />
@@ -156,13 +165,14 @@
 	</target>
 	
 	<target name="build" depends="compile, test, jar, api" />
-	<target name="all" depends="build, api.zip, dist" />
+	<target name="all" depends="build, jar.src, api.zip, dist" />
 
 	<target name="cruise" depends="all">
 		<delete dir="cruise" />
 		<mkdir dir="cruise" />
 		<copy todir="${basedir}/cruise">
 			<fileset file="${basedir}/build/exedio-cops.jar" />
+			<fileset file="${basedir}/build/exedio-cops.jar-src.zip" />
 			<fileset file="${basedir}/build/exedio-cops-src-${build.file.tag}.tar.gz" />
 			<fileset file="${basedir}/build/exedio-cops-api.tar.bz2" />
 		</copy>
