--- a/build.xml
+++ b/build.xml
@@ -95,6 +95,7 @@
 				compression="gzip">
 			<tarfileset file="${basedir}/build/build.number" />
 			<tarfileset dir="${basedir}">
+				<exclude name=".eclipse-output/**" />
 				<exclude name="build/**" />
 				<exclude name="api/**" />
 				<exclude name="cruise/**" />
