add junit.jar to classpath, makes junit.jar in ant/lib superfluous
git-svn-id: https://svn.exedio.com/cope/trunk/cops@10338 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -58,6 +58,7 @@
 			<classpath>
 				<pathelement location="build/classes" />
 				<pathelement location="build/testclasses" />
+				<pathelement location="lib/junit.jar" />
 				<pathelement location="lib/servlet-api.jar" />
 			</classpath>
 			<test name="com.exedio.cops.PackageTest" todir="build/testresults" outfile="cops" />
