project level task def for jspm
git-svn-id: https://svn.exedio.com/cope/trunk/cops@10584 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -4,13 +4,11 @@
 
 	<property name="build.file.tag" value="unlabeled" />
 	
-	<target name="jspm.taskdef">
-		<taskdef name="jspm"
-					classname="com.exedio.jspm.AntTask"
-					classpath="lib/exedio-jspm.jar" />
-	</target>
+	<taskdef name="jspm"
+				classname="com.exedio.jspm.AntTask"
+				classpath="lib/exedio-jspm.jar" />
 	
-	<target name="jspm" depends="jspm.taskdef">
+	<target name="jspm">
 		<jspm>
 			<fileset dir="src" includes="**/*.jspm" />
 		</jspm>
@@ -91,7 +89,7 @@
 		</zip>
 	</target>
 	
-	<target name="example.jspm" depends="jspm.taskdef">
+	<target name="example.jspm">
 		<jspm method="append">
 			<fileset dir="example/src" includes="**/*.jspm" />
 		</jspm>
