add target tomcat
git-svn-id: https://svn.exedio.com/cope/trunk/cops@10670 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -232,6 +232,7 @@
 	<target name="jspm" depends="runtime.jspm, example.jspm" />
 	<target name="build" depends="compile, test, jar, example, api" />
 	<target name="all" depends="build, jar.src, dist" />
+	<target name="tomcat" depends="example.tomcat" />
 
 	<target name="cruise" depends="all">
 		<delete dir="cruise" />
