new jspm version: change default method from print to append
git-svn-id: https://svn.exedio.com/cope/trunk/cops@10752 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -9,7 +9,7 @@
 				classpath="lib/exedio-jspm.jar" />
 	
 	<target name="runtime.jspm">
-		<jspm>
+		<jspm method="print">
 			<fileset dir="src" includes="**/*.jspm" />
 		</jspm>
 	</target>
