--- a/build.xml
+++ b/build.xml
@@ -264,6 +264,7 @@
 			<fileset file="${basedir}/build/exedio-cops.jar-src.zip" />
 			<fileset file="${basedir}/build/exedio-cops-src-${build.file.tag}.tar.gz" />
 		</copy>
+		<copy file="CHANGELOG" tofile="${basedir}/cruise/exedio-cops.jar-CHANGELOG" />
 	</target>
 	
 </project>
