enhanced cops getlib.xml for library dependency checks, updated jspm lib
git-svn-id: https://svn.exedio.com/cope/trunk/cops@11642 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -273,6 +273,7 @@
 			<fileset file="${basedir}/build/exedio-cops-src-${build.file.tag}.tar.gz" />
 		</copy>
 		<copy file="CHANGELOG" tofile="${basedir}/cruise/exedio-cops.jar-CHANGELOG" />
+		<copy file="getlib.properties" tofile="${basedir}/cruise/getlib.properties" />
 	</target>
 	
 </project>
