--- a/build.xml
+++ b/build.xml
@@ -264,7 +264,7 @@
 	<target name="all" depends="build, jar.src, dist" />
 	<target name="tomcat" depends="example.tomcat" />
 
-	<target name="cruise" depends="all">
+	<target name="cruise" depends="clean, all">
 		<delete dir="cruise" />
 		<mkdir dir="cruise" />
 		<copy todir="${basedir}/cruise">
