simplify copying getlib.properties
git-svn-id: https://svn.exedio.com/cope/trunk/cops@11764 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -268,12 +268,12 @@
 		<delete dir="cruise" />
 		<mkdir dir="cruise" />
 		<copy todir="${basedir}/cruise">
+			<fileset file="${basedir}/getlib.properties" />
 			<fileset file="${basedir}/build/exedio-cops.jar" />
 			<fileset file="${basedir}/build/exedio-cops.jar-src.zip" />
 			<fileset file="${basedir}/build/exedio-cops-src-${build.file.tag}.tar.gz" />
 		</copy>
 		<copy file="CHANGELOG" tofile="${basedir}/cruise/exedio-cops.jar-CHANGELOG" />
-		<copy file="getlib.properties" tofile="${basedir}/cruise/getlib.properties" />
 	</target>
 	
 </project>
