cleanup, we do not check for tomcat apis at the moment
git-svn-id: https://svn.exedio.com/cope/trunk/cops@11994 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/getlib.properties
+++ b/getlib.properties
@@ -8,8 +8,8 @@ commons-fileupload = 1.1
 commons-io = 1.1
 
 # provided by apache tomcat
-servlet-api = 1.500605
-catalina = 1.500605
+#servlet-api = 1.500605
+#catalina = 1.500605
 
 #cruise build 14
 exedio-jspm = 20081208110233
