better compress zips
git-svn-id: https://svn.exedio.com/cope/trunk/cops@12672 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -105,7 +105,7 @@
 	
 	<target name="jar.src">
 		<mkdir dir="build" />
-		<zip destfile="build/exedio-cops.jar-src.zip">
+		<zip destfile="build/exedio-cops.jar-src.zip" filesonly="true" whenempty="fail" duplicate="fail" level="9">
 			<zipfileset dir="${basedir}/src">
 				<include name="**/*.java" />
 			</zipfileset>
