exclude jspm classes from jar-src
git-svn-id: https://svn.exedio.com/cope/trunk/cops@12673 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -108,6 +108,7 @@
 		<zip destfile="build/exedio-cops.jar-src.zip" filesonly="true" whenempty="fail" duplicate="fail" level="9">
 			<zipfileset dir="${basedir}/src">
 				<include name="**/*.java" />
+				<exclude name="**/*_Jspm.java" />
 			</zipfileset>
 			<zipfileset dir="${basedir}/catalinasrc">
 				<include name="**/*.java" />
