smaller jar-files
git-svn-id: https://svn.exedio.com/cope/trunk/cops@12677 e7d4fc99-c606-0410-b9bf-843393a9eab7

--- a/build.xml
+++ b/build.xml
@@ -90,7 +90,7 @@
 	<target name="test" depends="test.run" />
 	
 	<target name="jar" depends="compile, catalina.compile">
-		<jar jarfile="build/exedio-cops.jar" basedir="build/classes" duplicate="fail">
+		<jar jarfile="build/exedio-cops.jar" basedir="build/classes" filesonly="true" duplicate="fail" level="9">
 			<manifest>
 				<attribute name="Specification-Title" value="exedio cops"/>
 				<attribute name="Specification-Version" value="${build.tag}"/>
