--- a/build.xml
+++ b/build.xml
@@ -258,6 +258,10 @@
 				compression="gzip">
 			<tarfileset file="${basedir}/build/build.number" />
 			<tarfileset dir="${basedir}">
+				<exclude name="getlib/**" />
+				<exclude name="getlib.xml" />
+				<exclude name="getlib.properties" />
+				<exclude name="log.xml" /><!-- created by cruise -->
 				<exclude name=".eclipse-output/**" />
 				<exclude name="build/**" />
 				<exclude name="tomcat/**" />
